Nova Tela Perfil

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
     <string name="strSalvar">Salvar</string>
+    <string name="strPerfil">Perfil</string>
 </resources>
