--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -48,4 +48,9 @@
     </string>
     <string name="strSalvar">Salvar</string>
     <string name="strPerfil">Perfil</string>
+    <string name="strProdutos">Produtos</string>
+    <string name="strReais">"R$ "</string>
+    <string name="strValorRucula">4,99</string>
+    <string name="strDescRuculaTitulo">Rúcula (180g)</string>
+    <string name="strDescRucula">Rúcula fresca e nutritiva, cultivada em fazenda indoor com tecnologia avançada para garantir sabor e qualidade excepcionais o ano todo.</string>
 </resources>
